properly close the output stream or play goes crazy.

--- a/app/views/repl.scala.html
+++ b/app/views/repl.scala.html
@@ -18,7 +18,7 @@
         <div id="content">
 
         </div>
-        <p id="examples">just hit Enter to send.</p>
+        <p id="examples">just hit Enter to send, and ":quit" to properly exit the REPL (you can close or reload after that).</p>
 
         <input id="text" type="text" size="80" />
 
