better client-side input.

--- a/app/views/repl.scala.html
+++ b/app/views/repl.scala.html
@@ -20,7 +20,7 @@
         </div>
         <p id="examples">just hit Enter to send.</p>
 
-        <input id="text" type="text" size="80" />
+        scala> <input id="text" type="text" size="80" />
 
     </div>
 
